tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_ISNOT_complex.py
@types('complex', 'complex')
def compare_isnot_complex(a, b):
    return a is not b
